# orbuculum

./: .gitattributes  .gitignore  .travis.yml  CHANGES.md  CONTRIBUTORS  COPYING  LICENSE  Makefile  README.md  Windows.md  meson.build
.github/workflows/: build-linux.yml  build-osx.yml  build-windows.yml
Docs/: BlackMagicProbe-Interface  JLink-Interface  TTLSerial-Interface
Inc/: bfd_wrapper.h  cobs.h  cobsDecoder.h  dataStream.h  etmDecoder.h  etmdec.h  ext_fileformats.h  fifos.h  fileWriter.h  fileWriterProtocol.h  ftdispi.h  generics.h  git_version_info.h.in  itmDecoder.h  itmSeq.h  itmfifos.h  loadelf.h  msgDecoder.h  msgSeq.h  nw.h  nwclient.h  oflow.h  orblcd_protocol.h  orbtraceIf.h  orbuculumOptions.h  osxelf.h  otag.h  readsource.h  sio.h  stream.h  stream_win32.h  symbols.h  tpiuDecoder.h  traceDecoder.h  uicolours_default.h  uicolours_mono.h  uthash.h
Inc/rtos/: exceptions.h  rtos_support.h  rtx5.h
Python/: orbcat.py
Python/pyorb/: __init__.py
Src/: cobs.c  cobsDecoder.c  dataStream_file_posix.c  dataStream_socket.c  etmDecoder.c  etmdec.c  ext_fileformats.c  fifos.c  fifos.h  filewriter.c  ftdispi.c  generics.c  getline.c  itmDecoder.c  itmSeq.c  itmfifos.c  loadelf.c  msgDecoder.c  msgSeq.c  nwclient.c  oflow.c  orbcat.c  orbdump.c  orbfifo.c  orbflow.c  orblcd.c  orbmortem.c  orbprofile.c  orbstat.c  orbtop.c  orbtrace.c  orbtraceIf.c  orbuculum.c  orbzmq.c  otag.c  readsource.c  serialFeeder_win32.c  sio.c  stream_file_posix.c  stream_file_win32.c  (+11 more)
Src/rtos/: exceptions.c  options.c  options.h  orbtop_rtos.c  rtos_api.c  telnet_client.c  telnet_client.h
Src/rtos/openocd/: stm32h74x.cfg
Src/rtos/output/: output_console.c  output_console.h  output_ftrace.c  output_ftrace.h  output_handler.c  output_handler.h  output_json.c  output_json.h
Src/rtos/rtx5/: rtx5.c
Support/: 60-orbcode.rules  configure-swo.c  filewriter-client.c  filewriter-client.h  gdbinit-bmp  gdbinit-example  gdbinit-jlink  gdbtrace.init  gdbtrace_withwith.init  nucleo_stm427_stlink.ocd  objdumpkc  orbcfg.toml  orbtop.gplt  orbtop_plot  zmqtest.c  zmqtest.py
Support/filewriter/: filewriter-client.c  filewriter-client.h  iostubs.c
Support/gcov/: mgcov_stubs.c  mgcov_stubs.h
Support/gdbinits/: gdbinit-bmp  gdbinit-jlink
Support/orbplot/: orbtop_plot
Tests/: test_cobs.c
Tools/: dwarf_lines.py  jsonreader.py  pretty
Tools/git_hash_to_c/: git_hash_to_c.sh
Tools/povray/: CIE.inc  espd_lightsys.inc  pr.pov  spectral.inc  spectral_glasses.inc  spectral_lights.inc  spectral_materials.inc  spectral_metals.inc  spectral_minerals.inc
config/: astyle.conf
orbtrace/: README.md
orbtrace/Doc/: architecture.odp
orbtrace/bob/: bob.pro  bob.sch
orbtrace/hw/bob/: bob.kicad_pcb  bob.sch  fp-info-cache  sn74avc8t245pw.lib
orbtrace/hw/capure/: capure.kicad_pcb  capure.sch
orbtrace/hw/capure/capure.pretty/: pin_header.kicad_mod
orbtrace/hw/lcdbob/: lcdbob.kicad_pcb  lcdbob.pro  lcdbob.sch  sym-lib-table
orbtrace/nmigen/: cmsis_dap.py  cmsis_test.py  dbgIF.py  orbtrace_builder.py  orbtrace_platform_ecp5.py  traceIF.py
orbtrace/src/: .gitignore  ECPIX_5_85F.lpf  ICE40HX1K_STICK_EVN.pcf  ICE40HX8K_B_EVN.pcf  ICEBREAKER.pcf  Makefile  create  dbgIF.v  flagSync.v  frameBuffer.v  frameToSPI.v  frameToSerial.v  orbtrace.v  packBuffer.v  packBuild.v  packCollect.v  packSend.v  packToSPI.v  packToSerial.v  ram.v  spi.v  swdIF.v  toplevel.pcf  toplevel.v  toplevel_ecp5.v  toplevel_ice40.v  traceIF.v  uart.v
orbtrace/src/sump2/: core.v  mesa2ctrl.v  mesa2lb.v  mesa_ascii2nibble.v  mesa_byte2ascii.v  mesa_core.v  mesa_decode.v  mesa_id.v  mesa_phy.v  mesa_tx_uart.v  mesa_uart.v  spi_byte2bit.v  spi_prom.v  sump2.v  time_stamp.v  top.v  top_pll.v
orbtrace/src/unused/: packToSPI.v  spi.v
orbtrace/stimfiles/: convert.py
orbtrace/testbeds/: dbgIF_tb.v  packBuffer_tb.v  packBuild_tb.v  packCollect_tb.v  packFilter_tb.v  packRun_tb.v  packToSerial_tb.v  swdIF_tb.v  system_tb.v  traceIF_tb.v  uart_tb.v  uart_tb_tb.v
orbtrace/testbeds/unused/: spi_tb.v
subprojects/: .gitignore  libdwarf.wrap  tomlplusplus.wrap
subprojects/packagefiles/libdwarf/: 0001-fix-Use-project_source_root-for-subproject-compatibi.patch  0002-fix-compilation-clang.patch  0003-Fixed-calloc-arguments-order.patch
subprojects/tomlplusplus-3.3.0/: .meson-subproject-wrap-hash.txt
sump2/: bd_server.ini  bd_server.py  readme.txt  sump2.ini  sump2.py  sump2_demo.vcd  sump2_key_macros.txt  sump2_log.txt  sump2_manual.txt  sump2_rle_cull_list.txt  sump2_rle_dump.txt  sump2_wave.txt
win32/: install_dlls.sh  meson.build
